--- a/Informatique Fondamentale/1. Logique Propositionnelle.md
+++ b/Informatique Fondamentale/1. Logique Propositionnelle.md
@@ -142,3 +142,14 @@ Un **littéral** est une proposition $x$ ou la négation d’une proposition $\l
 ### 1.6.2 Algorithme
 
 #TODO 
+
+
+
+
+
+$$
+\exists_{V} \cdot V \vDash \phi
+$$$$
+\forall_V \cdot V \vDash \phi
+$$
+
